# big-bang

./: .gitignore  .merlin  .paths  .project  .travis-ci.sh  .travis.yml  Ast.hs  COMPILE.md  DEVELOP.md  Dockerfile  Interpreter.hs  InterpreterMain.hs  LICENSE  Lexer.x  Lexer_Test.hs  Makefile  Parser.y  Parser_Test.hs  README-Compiling.md  README-Developers.md  README.md  TODO  Types.hs  UtilTypes.hs  Vagrantfile  _oasis  _tags  big-bang-user-documentation.org  big-bang.cabal  docker-compose.yml  ensure-oasis-configuration
little-bang/: .project  little-bang.cabal  output.txt
little-bang-tests/: .project  little-bang-tests.cabal
little-bang-tests/lib-src/Test/LittleBang/: Options.hs  SourceFile.hs
little-bang-tests/test-src/: Main.hs
little-bang-tests/tests/: if-then-else.lb  non-contractive-function-call.lb  non-contractive-pattern-match.lb  repeated-function-onion-failure.lb  repeated-function-onion.lb  standard-functions.lb
little-bang/docs/: grammar.txt
little-bang/docs/modules/: jhupllab.sty  macros.tex  main.tex
little-bang/docs/translation/: macros.tex  main.tex
little-bang/executable-src/: Interpreter.hs
little-bang/interp-src/: Main.hs
little-bang/lib-src/ATranslation/: Main.hs  TranslationState.hs  Translator.hs
little-bang/lib-src/Language/LittleBang/: Ast.hs  Lifter.hs  TBNConversion.hs  Translator.hs
little-bang/lib-src/Language/TinyBangNested/: Ast.hs
little-bang/test-src/: Main.hs
little-bang/test-src/Test/ATranslation/: Translator.hs
little-bang/test-src/Test/Translator/: Translator.hs
micro-tests/: micro-bang-tests.cabal
micro-tests/executable-src/: Test.hs
related-languages/pat-bang/: .project  README  pat-bang.cabal  to-think-about.txt
related-languages/pat-bang/interp-src/: Main.hs
related-languages/pat-bang/lib-src/Data/: Adj.hs  NFA.hs
related-languages/pat-bang/lib-src/Utils/: Toploop.hs  Tuple.hs
related-languages/pat-bang/notes/: TypeConstraint-Overlapping.txt
related-languages/pat-bang/test-src/: Main.hs
related-languages/pat-bang/tests/: addition.pb  application-simple-type-error.pb  comparison-greater-false.tb  conditional-simple.pb  conditional-simple.tb  conjunctive-match-on-deep-union-type-error.pb  conjunctive-match-on-union-type-error.pb  conjunctive-match-on-union-type-error.tb  conjunctive-match.pb  deep-match-type-error.pb  deep-write.tb  disjunctive-pattern.pb  nested-call-type-error.pb  nested-call.pb  onioned-label-match.pb  onioned-label-match.tb  overview-ast-recognizer.pb  overview-isDollarsList-false.pb  overview-isDollarsList-true.pb  overview-isList-false.pb  overview-isList-substitution-false.pb  overview-isList-substitution-recdata-false.pb  overview-isList-substitution-recdata-true.pb  overview-isList-substitution-true.pb  overview-isList-true.pb  overview-patternsAsData-1.pb  overview-patternsAsData-2.pb  overview-patternsAsData-3.pb  overview-patternsAsData-4.pb  pattern-of.pb  recursive-counter.pb  recursive-match-failre.pb  recursive-summation.pb  recursive-summation.tb  self-passing-counter-type-error.tb
tiny-bang/: .paths  .project  COMPILE.md  Makefile  _oasis  tiny-bang.cabal
tiny-bang-nested/: .project  tiny-bang-nested.cabal
tiny-bang-nested-tests/: .project  tiny-bang-nested-tests.cabal
tiny-bang-nested-tests/lib-src/Test/TinyBangNested/: Options.hs  SourceFile.hs
tiny-bang-nested-tests/old-test-src/Test/ATranslation/: Translator.hs
tiny-bang-nested-tests/test-src/: Main.hs
tiny-bang-nested-tests/tests/: two-additions.tbn
tiny-bang-nested/docs/: grammar.txt
tiny-bang-nested/interp-src/: Main.hs
tiny-bang-nested/lib-src/Language/TinyBangNested/: ATranslator.hs
tiny-bang-nested/test-src/Test/ATranslation/: Translator.hs
tiny-bang-tests/: .project  tiny-bang-tests.cabal
tiny-bang-tests/lib-src/Test/TinyBang/: Options.hs  SourceFile.hs
tiny-bang-tests/test-src/: Main.hs
tiny-bang-tests/tests/: addition-type-error.tb  application-simple-type-error.tb  cell-write.tb  comparison-greater-false.tb  comparison-greater-true.tb  comparison-greater-type-error.tb  comparison-less-type-error.tb  conditional-simple.tb  conjunctive-match-on-deep-union-type-error.tb  conjunctive-match-on-union-type-error.tb  conjunctive-match.tb  deep-match-type-error.tb  deep-write.tb  double-application.tb  multiplication-two-negatives.tb  multiplication-type-error.tb  multiplication.tb  nested-call-type-error.tb  nested-call.tb  onioned-label-match.tb  recursive-counter.tb  recursive-summation.tb  refinement-collapse.tb  self-passing-counter-type-error.tb  self-passing-counter.tb  single-application.tb  transitivity.tb
tiny-bang/executable-src/: Interpreter.hs
tiny-bang/interp-src/: Logging.hs  Main.hs
tiny-bang/interp-src/Interpreter/: SourceInterpreter.hs
tiny-bang/lib-src/Data/: Concat.hs  IndexedSet.hs
tiny-bang/lib-src/Data/IndexedSet/: Class.hs  Common.hs  TemplateHaskell.hs
tiny-bang/lib-src/Utils/: GetOpt.hs  ParserUtils.hs  TemplateHaskell.hs  Toploop.hs  Tuple.hs
tiny-bang/notes/: TypeConstraint-Foldable.txt
tiny-bang/src/: TinyBang_Ast.ml  TinyBang_Lexer.mll  TinyBang_Parser.mly  TinyBang_Toploop.ml  tinybang.ml
tiny-bang/src/Executables/: Interpreter.hs
tiny-bang/src/Utils/: Monad.hs
tiny-bang/test-src/: Main.hs  Options.hs
tiny-bang/test-src/Tests/: ValueDsl.hs
tiny-bang/tests/: addition-type-error.tb  addition.tb  application-simple-type-error.tb  cell-write.tb  comparison-greater-true.tb  comparison-greater-type-error.tb  comparison-less-false.tb  comparison-less-true.tb  comparison-less-type-error.tb  conditional-simple.tb  conjunctive-match-on-deep-union-type-error.tb  conjunctive-match.tb  deep-match-type-error.tb  deep-write.tb  multiplication-two-negatives.tb  multiplication-type-error.tb  multiplication.tb  nested-call-type-error.tb  nested-call.tb  onioned-label-match.tb  recursive-counter.tb  self-passing-counter-type-error.tb  self-passing-counter.tb
tiny-bang/tools/: build-for-profiling  split-test-files.py
tiny-bang/tools/grammar/: TinyBang.g
tiny-tests/: tiny-bang-tests.cabal
tiny-tests/executable-src/: Test.hs
(+805 files in other folders)
