name:           little-bang
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-nested,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
  exposed-modules: 
                   Language.LittleBang.Ast,
                   Language.LittleBang.Ast.Data,
                   Language.LittleBang.Syntax.Lexer,
                   Language.LittleBang.Syntax.Parser,
                   Language.LittleBang.Translator

executable little-bang
  hs-source-dirs:  interp-src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-nested,
                   little-bang,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall

executable testlb
  hs-source-dirs:  test-src                   
                   
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-nested,
                   little-bang,
                   HUnit >= 1.2 && < 2,
                   test-framework >= 0.4.1,
                   test-framework-hunit,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
