name:           little-bang
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   
                   base >= 4,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec,
                   tiny-bang,
                   tiny-bang-nested
  ghc-options:     -Wall
  exposed-modules: 
                   Language.LittleBang.Ast,
                   Language.LittleBang.Ast.Data,
                   Language.LittleBang.Syntax.Lexer,
                   Language.LittleBang.Syntax.Parser,
                   Language.LittleBang.Translator,
                   Language.LittleBang.TBNConversion
  other-modules:   Language.LittleBang.Syntax.Tokens

executable little-bang
  hs-source-dirs:  interp-src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-nested,
                   little-bang,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
