name:           tiny-bang-nested-tests
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-nested,
                   tiny-bang-tests,
                   parsec,
                   containers,
                   mtl,
                   HUnit,
                   filepath,
                   directory,
                   split,
                   test-framework,
                   hslogger,
                   either
  ghc-options:     -Wall
  exposed-modules: Test.TinyBangNested.Options,
                   Test.TinyBangNested.SourceFile,
                   Test.TinyBangNested.SourceFile.Expectation

executable tiny-bang-nested-tests
  hs-source-dirs:  test-src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   tiny-bang-tests,
                   tiny-bang-nested,
                   tiny-bang-nested-tests,
                   test-framework,
                   test-framework-hunit,
                   containers,
                   mtl
  ghc-options:     -Wall
