name:           tiny-bang-nested
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   base >= 4,
                   tiny-bang,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
  exposed-modules:
                   Language.TinyBangNested.ATranslation.TranslationState,
                   Language.TinyBangNested.ATranslation.Translator,
                   Language.TinyBangNested.Ast,
                   Language.TinyBangNested.Ast.Data,
                   Language.TinyBangNested.Syntax.Lexer,
                   Language.TinyBangNested.Syntax.Parser

executable tiny-bang-nested
  hs-source-dirs:  interp-src
                   lib-src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   containers,
                   mtl,
                   wl-pprint,
                   transformers,
                   hslogger,
                   template-haskell,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
  other-modules:
                   Language.TinyBangNested.Syntax.Lexer
                   Language.TinyBangNested.Syntax.Parser
                   Language.TinyBangNested.Ast
                   Language.TinyBangNested.ATranslation.Translator

executable testlb
  hs-source-dirs:  
                   test-src                   
                   lib-src
                   
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tiny-bang,
                   HUnit >= 1.2 && < 2,
                   test-framework >= 0.4.1,
                   test-framework-hunit,
                   split,
                   either,
                   parsec
  ghc-options:     -Wall
  other-modules:
                   Language.TinyBangNested.Syntax.Lexer,
                   Language.TinyBangNested.Syntax.Parser,
                   Language.TinyBangNested.Ast,
                   Language.TinyBangNested.ATranslation.Translator
