name:           tiny-bang
version:        0.2
cabal-version:  >=1.8
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   
                   base >= 4,
                   parsec,
                   transformers,
                   template-haskell,
                   containers,
                   either,
                   mtl,
                   cmdargs,
                   split,
                   wl-pprint,
                   errors,
                   hslogger,
                   deepseq,
                   bytestring,
                   aeson,
                   stable-memo,
                   void,
                   array
  build-tools:     happy,
                   alex
  ghc-options:     -Wall
  exposed-modules: 
                   Language.TinyBang.TypeSystem.Monad.Trans.NonDet,
                   Language.TinyBang.Ast,
                   Language.TinyBang.Syntax.Location,
                   Language.TinyBang.Syntax.Lexer,
                   Language.TinyBang.Syntax.Parser,
                   Language.TinyBang.Syntax.Positional,
                   Language.TinyBang.Interpreter,
                   Language.TinyBang.Ast.Data,
                   Language.TinyBang.Interpreter.Compatibility,
                   Language.TinyBang.Interpreter.Basis,
                   Language.TinyBang.Interpreter.Equality,
                   Utils.Monad,
                   Data.Adj,
                   Language.TinyBang.Interpreter.DeepValues,
                   Language.TinyBang.TypeSystem.Types,
                   Language.TinyBang.TypeSystem.Contours,
                   Language.TinyBang.TypeSystem.InitialDerivation,
                   Language.TinyBang.TypeSystem.TypeInference,
                   Language.TinyBang.TypeSystem.Closure,
                   Language.TinyBang.TypeSystem.Monad.Trans.CReader,
                   Language.TinyBang.TypeSystem.Data,
                   Language.TinyBang.TypeSystem.Utils.DocumentContainer,
                   Language.TinyBang.Interpreter.Matching,
                   Language.TinyBang.Interpreter.Substitution,
                   Language.TinyBang.Interpreter.Variables,
                   Utils.Toploop,
                   Utils.CLI.Args.Logging,
                   Language.TinyBang.Toploop,
                   Language.TinyBang.Utils.TemplateHaskell.Deriving,
                   Language.TinyBang.Utils.TemplateHaskell.Reduce,
                   Language.TinyBang.Utils.TemplateHaskell.ReduceM,
                   Language.TinyBang.Utils.TemplateHaskell.Transform,
                   Language.TinyBang.Utils.TemplateHaskell.TransformM,
                   Language.TinyBang.Utils.TemplateHaskell.Utils,
                   Language.TinyBang.Syntax.Tokens,
                   Language.TinyBang.Syntax.Lexer,
                   Language.TinyBang.Ast.Origin,
                   Language.TinyBang.Ast.WellFormedness,
                   Language.TinyBang.Utils.Display,
                   Language.TinyBang.TypeSystem.ConstraintDatabase,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Simple,
                   Language.TinyBang.TypeSystem.ConstraintHistory,
                   Language.TinyBang.TypeSystem.Constraints,
                   Language.TinyBang.TypeSystem.Compatibility,
                   Language.TinyBang.TypeSystem.Matching,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Interface,
                   Language.TinyBang.Utils.Data.NFA,
                   Language.TinyBang.Utils.Data.NFA.Data,
                   Language.TinyBang.Utils.Data.NFA.Dictionary,
                   Language.TinyBang.Utils.Data.NFA.Function,
                   Language.TinyBang.Utils.Data.NFA.Utils,
                   Language.TinyBang.Utils.Data.NFA.Generalized,
                   Language.TinyBang.Interpreter.Builtins,
                   Language.TinyBang.Utils.Projection,
                   Language.TinyBang.TypeSystem.Closure.Basis,
                   Language.TinyBang.TypeSystem.Closure.Rules,
                   Language.TinyBang.TypeSystem.Closure.Builtins,
                   Language.TinyBang.Utils.Logger,
                   Language.TinyBang.Utils.Logger.Config,
                   Language.TinyBang.Utils.Logger.Generators,
                   Language.TinyBang.Utils.Logger.Operations,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils.SetBased.FreeVars,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils.SetBased.ReplaceVars,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils.SetBased.Polyinst,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils.SetBased.FindVars,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Utils.SetBased.LinearQuery,
                   Data.IndexedSet,
                   Data.IndexedSet.Class,
                   Data.IndexedSet.Common,
                   Data.IndexedSet.TemplateHaskell,
                   Language.TinyBang.TypeSystem.ConstraintDatabase.Indexed,
                   Language.TinyBang.Utils.Assertions,
                   Utils.TinyBang.Options,
                   Utils.GetOpt,
                   Utils.Monad.Writer
  other-modules:   
                   Language.TinyBang.Syntax.Parser,
                   Language.TinyBang.Syntax.Positional

executable tiny-bang
  hs-source-dirs:  interp-src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   tiny-bang,
                   containers,
                   mtl,
                   cmdargs,
                   parsec,
                   split,
                   wl-pprint,
                   errors,
                   hslogger,
                   bytestring,
                   aeson,
                   optparse-applicative
  ghc-options:     -Wall
