name:           tiny-bang
version:        0.2
cabal-version:  >=1.8
build-type:     Simple
author:         Zachary Palmer

library
  hs-source-dirs:  lib-src
  build-depends:   
                   base >= 4,
                   parsec,
                   transformers,
                   template-haskell,
                   containers,
                   either,
                   mtl,
                   cmdargs,
                   split,
                   wl-pprint,
                   errors,
                   hslogger,
                   deepseq,
                   bytestring,
                   aeson,
                   stable-memo,
                   void,
                   array,
                   tagged
  build-tools:     happy,
                   alex
  ghc-options:     -Wall
  exposed-modules: 
                   Control.Monad.Trans.NonDet,
                   Data.Adj,
                   Data.IndexedSet,
                   Data.IndexedSet.Class,
                   Data.IndexedSet.Common,
                   Data.IndexedSet.TemplateHaskell,
                   Language.TinyBang.Ast,
                   Language.TinyBang.Ast.Data,
                   Language.TinyBang.Ast.Origin,
                   Language.TinyBang.Ast.WellFormedness,
                   Language.TinyBang.Interpreter,
                   Language.TinyBang.Interpreter.Basis,
                   Language.TinyBang.Interpreter.Builtins,
                   Language.TinyBang.Interpreter.Compatibility,
                   Language.TinyBang.Interpreter.DeepValues,
                   Language.TinyBang.Interpreter.Equality,
                   Language.TinyBang.Interpreter.Matching,
                   Language.TinyBang.Interpreter.Substitution,
                   Language.TinyBang.Interpreter.Variables,
                   Language.TinyBang.Syntax.Lexer,
                   Language.TinyBang.Syntax.Parser,
                   Language.TinyBang.Syntax.Tokens,
                   Language.TinyBang.Toploop,
                   Language.TinyBang.Utils.Assertions,
                   Language.TinyBang.Utils.Data.NFA,
                   Language.TinyBang.Utils.Data.NFA.Data,
                   Language.TinyBang.Utils.Data.NFA.Dictionary,
                   Language.TinyBang.Utils.Data.NFA.Function,
                   Language.TinyBang.Utils.Data.NFA.Generalized,
                   Language.TinyBang.Utils.Data.NFA.Utils,
                   Language.TinyBang.Utils.Display,
                   Language.TinyBang.Utils.Logger,
                   Language.TinyBang.Utils.Logger.Config,
                   Language.TinyBang.Utils.Logger.Generators,
                   Language.TinyBang.Utils.Logger.Operations,
                   Language.TinyBang.Utils.Projection,
                   Language.TinyBang.Utils.Syntax,
                   Language.TinyBang.Utils.Syntax.Lexer,
                   Language.TinyBang.Utils.Syntax.Location,
                   Language.TinyBang.Utils.Syntax.Parser,
                   Language.TinyBang.Utils.Syntax.Positional,
                   Language.TinyBang.Utils.Syntax.TokenDisplay,
                   Language.TinyBang.Utils.Syntax.Tokens,
                   Language.TinyBang.Utils.TemplateHaskell.Deriving,
                   Language.TinyBang.Utils.TemplateHaskell.Reduce,
                   Language.TinyBang.Utils.TemplateHaskell.ReduceM,
                   Language.TinyBang.Utils.TemplateHaskell.Transform,
                   Language.TinyBang.Utils.TemplateHaskell.TransformM,
                   Language.TinyBang.Utils.TemplateHaskell.Utils,
                   Utils.CLI.Args.Logging,
                   Utils.GetOpt,
                   Utils.Monad,
                   Utils.Monad.Read,
                   Utils.Monad.Writer,
                   Utils.TinyBang.Options,
                   Utils.Toploop,
                   Language.TinyBang.TypeSystem,
                   Language.TinyBang.TypeSystem.Contours,
                   Language.TinyBang.TypeSystem.Interface,
                   Language.TinyBang.TypeSystem.Simple,
                   Language.TinyBang.TypeSystem.Simple.Data,
                   Language.TinyBang.TypeSystem.Simple.InitialAlignment,
                   Language.TinyBang.TypeSystem.Simple.Compatibility,
                   Language.TinyBang.TypeSystem.Simple.Matching,
                   Language.TinyBang.TypeSystem.Simple.Closure,
                   Language.TinyBang.TypeSystem.Simple.Typechecker,
                   Language.TinyBang.TypeSystem.Simple.Polymorphism,
                   Language.TinyBang.TypeSystem.Simple.Variables,
                   Language.TinyBang.TypeSystem.Simple.Closure.Basis,
                   Language.TinyBang.TypeSystem.Simple.Closure.Builtins,
                   Language.TinyBang.TypeSystem.Simple.Closure.Rules

executable tiny-bang
  hs-source-dirs:  interp-src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   tiny-bang,
                   containers,
                   mtl,
                   cmdargs,
                   parsec,
                   split,
                   wl-pprint,
                   errors,
                   hslogger,
                   bytestring,
                   aeson,
                   optparse-applicative
  ghc-options:     -Wall

